<resources>
    <string name="app_name">TripPlannr</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Trips (Testing)</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_notifications">Notifications</string>
    <string name="trip">Trip</string>
    <string name="trip_result">Trip Results</string>
    <string name="get_notifications">Get Notifications</string>

    <string name="google_maps_key">AIzaSyD8ui_bKdQDAIrPXE8f7cl_Tm9SXSX_iAQ</string>

    <string name="search">Search Fragment</string>
    <string name="title_saved_trips">Saved Trips</string>
    <string name="vasttrafik">Västtrafik: <a href="https://vasttrafik.se/biljetter/mer-om-biljetter/vasttrafik-to-go/">https://vasttrafik.se/biljetter/mer-om-biljetter/vasttrafik-to-go/</a></string>
    <string name="stenaline">Stenaline: <a href="https://stenaline.se">https://stenaline.se</a></string>
    <string name="title_ferry_info">Ferry Info</string>
    <string name="checkmark">\u2713</string>
</resources>
