<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_trip_fragment"
        android:name="com.example.tripplannr.application_layer.trip.TripFragment"
        android:label="@string/trip">
        <action
            android:id="@+id/action_navigation_trip_fragment_to_navigation_ferry_info"
            app:destination="@id/navigation_ferry_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_trip_results"
        android:name="com.example.tripplannr.application_layer.trip.TripResultFragment"
        android:label="@string/trip_result"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_trip_results_to_navigation_trip_fragment"
            app:destination="@id/navigation_trip_fragment" />
    </fragment>

    <!--<fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tripplannr.controller.trip.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

        <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.tripplannr.controller.trip.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />-->


    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.tripplannr.application_layer.search.MainSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_frag" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_trip_results"
            app:destination="@id/navigation_trip_results" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved_trips"
        android:name="com.example.tripplannr.application_layer.profile.SavedTripFragment"
        android:label="@string/title_saved_trips"
        tools:layout="@layout/fragment_saved_trip" >
        <action
            android:id="@+id/action_navigation_saved_trips_to_navigation_saved_trips_detailed"
            app:destination="@id/navigation_saved_trips_detailed" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved_trips_detailed"
        android:name="com.example.tripplannr.application_layer.profile.SavedTripDetailsFragment"
        android:label="@string/title_saved_trips"
        tools:layout="@layout/fragment_saved_trip_details" />

    <fragment
        android:id="@+id/navigation_ferry_info"
        android:name="com.example.tripplannr.application_layer.trip.FerryInfoFragment"
        android:label="@string/title_ferry_info"
        tools:layout="@layout/fragment_ferry_info" />

</navigation>